@@ -34,6 +34,7 @@ FIX Correction de la gestion des ID CSS dans les menus (sudwebdesign)
 FIX Autorisation du cross-origin dans les flux RSS/ATOM (sudwebdesign)
 FIX #287 Capcha : ajout d'un espace insécable avant le "?" (P3ter)
 FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI (bazooka07)
+FIX #315 Les espaces dans la recherche de medias font disparaitre les résultats (P3ter)
 FIX #318 L_NEW_CATEGORY en doublon pour certaines langues (P3ter)
 FIX #322 plxDate::getCalendar() ne retourne jamais L_SUNDAY (jerrywham, P3ter)
 FIX #323 La fonction plxUtils::printSelect ne fonctione pas avec un "selected" de type numérique (Philippe-M)
